[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://icons/circle_half.svg" type="Texture" id=3]
[ext_resource path="res://icons/eye_opened.svg" type="Texture" id=4]
[ext_resource path="res://icons/move.svg" type="Texture" id=5]
[ext_resource path="res://icons/eye_closed.svg" type="Texture" id=6]
[ext_resource path="res://icons/restore.svg" type="Texture" id=7]
[ext_resource path="res://icons/parallel.svg" type="Texture" id=8]
[ext_resource path="res://icons/not_parallel.svg" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0.00436884, 90.0095, -0.00436884, -90.0095, -161, 0, -90.7404, -0.0021533, 90.7404, 0.0021533, -1, -168, 0.00139487, -90.013, -0.00139487, 90.013, 159, 0, 90.3233, 0.00833336, -90.3233, -0.00833336, -1, 168, -0.000640184, 90.0132, 0.000640184, -90.0132, -161, 0 )
}

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="C_Controller" type="Button" parent="."]
margin_left = 1376.61
margin_top = 794.218
margin_right = 1473.61
margin_bottom = 885.22
focus_mode = 0
mouse_default_cursor_shape = 13
shortcut_in_tooltip = false
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D_Controller" type="Button" parent="."]
margin_left = 1382.7
margin_top = 228.066
margin_right = 1479.7
margin_bottom = 319.068
mouse_default_cursor_shape = 13
shortcut_in_tooltip = false
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Controller" type="Button" parent="."]
visible = false
margin_left = 385.892
margin_top = 834.217
margin_right = 482.892
margin_bottom = 925.22
focus_mode = 0
mouse_default_cursor_shape = 13
shortcut_in_tooltip = false
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Controller" type="Button" parent="."]
visible = false
margin_left = 438.356
margin_top = 223.718
margin_right = 535.356
margin_bottom = 314.718
mouse_default_cursor_shape = 13
shortcut_in_tooltip = false
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_B_C_D" type="Line2D" parent="."]
position = Vector2( -1, 0 )
z_index = 2
points = PoolVector2Array( 1408, 770, 512, 770, 512, 400, 1408, 400 )
width = 15.0
default_color = Color( 0, 0.901961, 0.941176, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="A_Controller_Text" type="Label" parent="."]
margin_left = 397.143
margin_top = 147.279
margin_right = 443.143
margin_bottom = 230.279
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Controller_Text" type="Label" parent="."]
margin_left = 336.0
margin_top = 976.0
margin_right = 380.0
margin_bottom = 1059.0
custom_fonts/font = SubResource( 1 )
text = "B"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C_Controller_Text" type="Label" parent="."]
margin_left = 1447.0
margin_top = 928.0
margin_right = 1493.0
margin_bottom = 1011.0
custom_fonts/font = SubResource( 1 )
text = "C"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D_Controller_Text" type="Label" parent="."]
margin_left = 1507.8
margin_top = 223.748
margin_right = 1553.8
margin_bottom = 306.748
custom_fonts/font = SubResource( 1 )
text = "D"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Text_Director" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="A_Text_Director_Follow" type="PathFollow2D" parent="A_Text_Director"]
position = Vector2( -161, 0 )
z_index = 2
rotate = false
cubic_interp = false

[node name="A_Text" type="Label" parent="A_Text_Director/A_Text_Director_Follow"]
margin_right = 115.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "--1--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Text_Director" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="B_Text_Director_Follow" type="PathFollow2D" parent="B_Text_Director"]
position = Vector2( -161, 0 )
z_index = 2
rotate = false
cubic_interp = false

[node name="B_Text" type="Label" parent="B_Text_Director/B_Text_Director_Follow"]
custom_fonts/font = SubResource( 1 )
text = "--1--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cutter" type="Polygon2D" parent="."]
position = Vector2( -1, 0 )
z_index = -1
color = Color( 0, 0, 0, 1 )
invert_enable = true
invert_border = 500.0
polygon = PoolVector2Array( 511, 210, 511, 960, 1408, 960, 1408, 210 )

[node name="A_Circle" type="Sprite" parent="."]
position = Vector2( 511, 295.771 )
rotation = 3.14159
scale = Vector2( 0.504201, 0.504201 )
z_index = -2
texture = ExtResource( 3 )

[node name="B_Circle" type="Sprite" parent="."]
position = Vector2( 511, 869.183 )
scale = Vector2( 0.504201, 0.504201 )
z_index = -2
texture = ExtResource( 3 )

[node name="A_Square" type="Line2D" parent="."]
position = Vector2( 511, 373.134 )
points = PoolVector2Array( 0, -80, 90, -80, 90, 0 )
width = 7.0
default_color = Color( 0, 1, 0.0862745, 1 )

[node name="B_Square" type="Line2D" parent="."]
position = Vector2( 519, 871.274 )
points = PoolVector2Array( 0, -80, 90, -80, 90, 0 )
width = 7.0
default_color = Color( 0, 1, 0.0862745, 1 )

[node name="A_Hide_Text" type="Label" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 151.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 3 )
text = "B-A-D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Hide" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 30.0
margin_right = 220.0
margin_bottom = 90.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Hide_Text" type="Label" parent="."]
margin_left = 30.0
margin_top = 100.0
margin_right = 152.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 3 )
text = "C-B-A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Hide" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 100.0
margin_right = 220.0
margin_bottom = 160.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Is_Parallel" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 172.0
margin_right = 220.0
margin_bottom = 232.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restore_Button" type="TextureButton" parent="."]
margin_left = 1828.0
margin_top = 40.0
margin_right = 1895.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
